# evalit

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: mod.rs  vm_benchmark.rs
examples/: eval.rs  hello.rs  hello_async.rs  scripting.rs
src/: ast.rs  bytecode.rs  compiler.rs  error.rs  interpreter.rs  lib.rs  runtime.rs
src/ast/: ast.rs  grammar.pest  interpreter.rs  parser.rs  syntax.rs
src/compiler/: ast.rs  codegen.rs  compiler.rs  ir.rs  lowering.rs  parser.rs  regalloc.rs  semantic.rs  symbol.rs  typing.rs
src/compiler/ast/: grammar.pest  syntax.rs  walker.rs
src/compiler/codegen/: codegen.rs  regalloc.rs
src/compiler/ir/: builder.rs  cfg.rs  instruction.rs  ssabuilder.rs
src/ir/: builder.rs  instruction.rs
src/runtime/: environment.rs  object.rs  value.rs  vm.rs
src/runtime/object/: array.rs  boolean.rs  emurator.rs  float.rs  function.rs  immd.rs  integer.rs  map.rs  metatable.rs  null.rs  optional.rs  promise.rs  range.rs  string.rs  structobject.rs  tuple.rs
tests/: eval.rs  interpreter.rs  test_basic_types.rs  test_control_flow.rs  test_embed.rs  test_function.rs  test_operators.rs  test_struct.rs  test_type_system.rs  utils.rs
