[package]
name = "evalit"
version = "0.2.0-beta.0"
edition = "2024"
authors = ["zzzdong <kuwater@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzdong/evalit"
homepage = "https://github.com/zzzdong/evalit"
documentation = "https://docs.rs/evalit/"
description = """
a toy interpreter
"""
categories = ["compilers", "parser-implementations"]
keywords = ["interpreter", "scripting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = [ "futures", "parking_lot" ]

[dependencies]
futures = { version = "0.3", optional = true }
log = "0.4"
parking_lot = { version = "0.12", optional = true }
pest = "2"
pest_derive = "2"
petgraph = "0.8"


[dev-dependencies]
criterion = "0.6"
env_logger = "0.11"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }


[[bench]]
name = "vm_benchmark"
harness = false
